--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,6 +1,6 @@
 # main links
 main:
-  - title: "Início do curso"
+  - title: "Início do eBook"
     url: /curso/apresentacao/
   - title: "Sobre"
     url: /sobre/
